<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Wifi Bar App</string>
	<string name="camarero">Selección Camarero</string>
	<string name="selectMesa">Selección de mesa</string>
	<!-- Errores -->
	<string name="noConectionActive">Error: No se pudo conectar con el servidor</string>
	<string name="noWifiActive">Error: Para usar esta aplicación debe habilitar la red Wi-Fi</string>
	<string name="emptyTable">Error: No hay información que mostrar</string>
	<string name="eAbrirMesa">Error: No se pudo abrir/cerrar la mesa</string>
	<string name="opMesaOk">Se realizó la operación sobre la mesa correctamente</string>
	<string name="noComandaGenerada">Error:No se ha podido generar la comanda</string>
	<string name="noPedidos">Error:no hay pedidos para esta mesa</string>
	<!-- / Errores --> 

	<!--//V1.1 -->
	<string name="user">Seleccionar camarero</string>
	<string name="comanda">Comanda</string>
	<string name="cerrar">Cerrar Mesa</string>
	<string name="abrir">Abrir Mesa</string>
	<string name="mesa">Elegir una mesa</string>
	<string name="VerComanda">Ver Linea</string>
	<string name="stringMesa">Mesa </string>
</resources>
