<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="match_parent"
	android:orientation="vertical">
	<TextView android:text="Mesa" android:id="@+id/textView1"
		android:textSize="20px" android:layout_height="wrap_content"
		android:layout_width="wrap_content" android:layout_gravity="center_horizontal">
	</TextView>
	<TextView android:text="Camarero: " android:id="@+id/tvCamarero"
		android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
	<TextView android:text="@string/mesa" android:id="@+id/textView2"
		android:textSize="15px" android:layout_width="wrap_content"
		android:layout_height="wrap_content"></TextView>
	<Button android:text="@string/comanda" android:id="@+id/btElegirMesa"
		android:onClick="elegirMesa" android:layout_width="wrap_content"
		android:layout_height="wrap_content">
	</Button>
	<Button android:text="@string/cerrar" android:id="@+id/btCerrar"
		android:onClick="onAccionMesa" android:layout_width="wrap_content"
		android:layout_height="wrap_content">
	</Button>
	<Button android:text="@string/abrir" android:id="@+id/btAbrir"
		android:layout_width="wrap_content" android:layout_height="wrap_content">
	</Button>
	<ListView android:layout_height="wrap_content" android:id="@+id/lvMesa"
		android:layout_width="match_parent"></ListView>

</LinearLayout>
